HUGE SAVE : Renamed every functions by changing the '::' to a single dot

--- a/install/.Bash-utils/config/modules/main/Filesystem.conf
+++ b/install/.Bash-utils/config/modules/main/Filesystem.conf
@@ -14,7 +14,7 @@
 ## FUNCTIONS
 
 # Writing the command substitution text for the file systems description strings.
-function BU::Main::ModConfig::Filesystem::PrintFSLengthDescription()
+function BU.Main.ModConfig.Filesystem.PrintFSLengthDescription()
 {
     printf "$__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__FILESYSTEM__MAX_LENGHT_STR_MSG" "$?";
 }
@@ -26,17 +26,17 @@ function BU::Main::ModConfig::Filesystem::PrintFSLengthDescription()
 #### PROCESSING FILE SYSTEM'S INFORMATIONS
 
 # Getting the file system's name with the "df" command, and parsing the output list according to the operating system's command version.
-BU::IsOSHaiku && __BU_MAIN_FS_NAME="$(df "$0" | awk 'FNR == 4 {print $3}')";
-BU::IsOSLinux && __BU_MAIN_FS_NAME="$(df -Th "$0" | awk 'FNR == 2 {print $2}')";
+BU.IsOSHaiku && __BU_MAIN_FS_NAME="$(df "$0" | awk 'FNR == 4 {print $3}')";
+BU.IsOSLinux && __BU_MAIN_FS_NAME="$(df -Th "$0" | awk 'FNR == 2 {print $2}')";
 
 ## EXT2 FILE SYSTEM'S INFORMATIONS
- 
+
 if [ "${__BU_MAIN_FS_NAME,,}" = 'apfs' ]; then
     # File system max filename length.
     __BU_MAIN_FS_MAX_FILENAME_LENGTH='255';
 
-    BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "$__BU_MAIN_FS_MAX_FILENAME_LENGTH" 'Int' \
-        "$(BU::Main::ModConfig::Filesystem::PrintFSLengthDescription "Apple's APFS")" \
+    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "$__BU_MAIN_FS_MAX_FILENAME_LENGTH" 'Int' \
+        "$(BU.Main.ModConfig.Filesystem.PrintFSLengthDescription "Apple's APFS")" \
         "$(basename "${BASH_SOURCE[0]}")" "${FUNCAME[0]}" "$(( LINENO-2 ))";
 
 # -----------------------------------------------
@@ -47,20 +47,20 @@ elif [ "${__BU_MAIN_FS_NAME,,}" = 'btrfs' ]; then
     # File system max filename length.
     __BU_MAIN_FS_MAX_FILENAME_LENGTH='255';
 
-    BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "$__BU_MAIN_FS_MAX_FILENAME_LENGTH" 'Int' \
-        "$(BU::Main::ModConfig::Filesystem::PrintFSLengthDescription 'Btrfs')" \
+    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "$__BU_MAIN_FS_MAX_FILENAME_LENGTH" 'Int' \
+        "$(BU.Main.ModConfig.Filesystem.PrintFSLengthDescription 'Btrfs')" \
         "$(basename "${BASH_SOURCE[0]}")" "${FUNCAME[0]}" "$(( LINENO-2 ))";
 
 # -----------------------------------------------
 
 ## EXT2 FILE SYSTEM'S INFORMATIONS
- 
+
 elif [ "${__BU_MAIN_FS_NAME,,}" = 'ext2' ]; then
     # File system max filename length.
     __BU_MAIN_FS_MAX_FILENAME_LENGTH='255';
 
-    BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "$__BU_MAIN_FS_MAX_FILENAME_LENGTH" 'Int' \
-        "$(BU::Main::ModConfig::Filesystem::PrintFSLengthDescription 'EXT2')" \
+    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "$__BU_MAIN_FS_MAX_FILENAME_LENGTH" 'Int' \
+        "$(BU.Main.ModConfig.Filesystem.PrintFSLengthDescription 'EXT2')" \
         "$(basename "${BASH_SOURCE[0]}")" "${FUNCAME[0]}" "$(( LINENO-2 ))";
 
 # -----------------------------------------------
@@ -71,8 +71,8 @@ elif [ "${__BU_MAIN_FS_NAME,,}" = 'ext3' ]; then
     # File system max filename length.
     __BU_MAIN_FS_MAX_FILENAME_LENGTH='255';
 
-    BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "$__BU_MAIN_FS_MAX_FILENAME_LENGTH" 'Int' \
-        "$(BU::Main::ModConfig::Filesystem::PrintFSLengthDescription 'EXT3')" \
+    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "$__BU_MAIN_FS_MAX_FILENAME_LENGTH" 'Int' \
+        "$(BU.Main.ModConfig.Filesystem.PrintFSLengthDescription 'EXT3')" \
         "$(basename "${BASH_SOURCE[0]}")" "${FUNCAME[0]}" "$(( LINENO-2 ))";
 
 # -----------------------------------------------
@@ -83,8 +83,8 @@ elif [ "${__BU_MAIN_FS_NAME,,}" = 'ext4' ]; then
     # File system max filename length.
     __BU_MAIN_FS_MAX_FILENAME_LENGTH='255';
 
-    BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "$__BU_MAIN_FS_MAX_FILENAME_LENGTH" 'Int' \
-        "$(BU::Main::ModConfig::Filesystem::PrintFSLengthDescription 'EXT4')" \
+    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "$__BU_MAIN_FS_MAX_FILENAME_LENGTH" 'Int' \
+        "$(BU.Main.ModConfig.Filesystem.PrintFSLengthDescription 'EXT4')" \
         "$(basename "${BASH_SOURCE[0]}")" "${FUNCAME[0]}" "$(( LINENO-2 ))";
 
 # -----------------------------------------------
@@ -95,8 +95,8 @@ elif [ "${__BU_MAIN_FS_NAME,,}" = 'jfs' ]; then
     # File system max filename length.
     __BU_MAIN_FS_MAX_FILENAME_LENGTH='255';
 
-    BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "$__BU_MAIN_FS_MAX_FILENAME_LENGTH" 'Int' \
-        "$(BU::Main::ModConfig::Filesystem::PrintFSLengthDescription 'JFS')" \
+    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "$__BU_MAIN_FS_MAX_FILENAME_LENGTH" 'Int' \
+        "$(BU.Main.ModConfig.Filesystem.PrintFSLengthDescription 'JFS')" \
         "$(basename "${BASH_SOURCE[0]}")" "${FUNCAME[0]}" "$(( LINENO-2 ))";
 
 # -----------------------------------------------
@@ -107,8 +107,8 @@ elif [ "${__BU_MAIN_FS_NAME,,}" = 'xfs' ]; then
     # File system max filename length.
     __BU_MAIN_FS_MAX_FILENAME_LENGTH='255';
 
-    BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "$__BU_MAIN_FS_MAX_FILENAME_LENGTH" 'Int' \
-        "$(BU::Main::ModConfig::Filesystem::PrintFSLengthDescription 'XFS')" \
+    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "$__BU_MAIN_FS_MAX_FILENAME_LENGTH" 'Int' \
+        "$(BU.Main.ModConfig.Filesystem.PrintFSLengthDescription 'XFS')" \
         "$(basename "${BASH_SOURCE[0]}")" "${FUNCAME[0]}" "$(( LINENO-2 ))";
 
 # -----------------------------------------------
@@ -119,20 +119,20 @@ elif [ "${__BU_MAIN_FS_NAME,,}" = 'zfs' ]; then
     # File system max filename length.
     __BU_MAIN_FS_MAX_FILENAME_LENGTH='255';
 
-    BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "$__BU_MAIN_FS_MAX_FILENAME_LENGTH" 'Int' \
-        "$(BU::Main::ModConfig::Filesystem::PrintFSLengthDescription 'ZFS')" \
+    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "$__BU_MAIN_FS_MAX_FILENAME_LENGTH" 'Int' \
+        "$(BU.Main.ModConfig.Filesystem.PrintFSLengthDescription 'ZFS')" \
         "$(basename "${BASH_SOURCE[0]}")" "${FUNCAME[0]}" "$(( LINENO-2 ))";
 
 # -----------------------------------------------
 
 else
     # shellcheck disable=SC2059
-    BU::Main::Errors::HandleSmallErrors 'W' "$(printf "$__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__FILESYSTEM__UNSUPPORTED_FILESYSTEM" "$(BU::DechoHighlight "$__BU_MAIN_FS_NAME")")" 'R';
+    BU.Main.Errors.HandleSmallErrors 'W' "$(printf "$__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__FILESYSTEM__UNSUPPORTED_FILESYSTEM" "$(BU.DechoHighlight "$__BU_MAIN_FS_NAME")")" 'R';
 
     # File system max filename length.
     __BU_MAIN_FS_MAX_FILENAME_LENGTH='255';
 
-    BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "$__BU_MAIN_FS_MAX_FILENAME_LENGTH" 'Int' \
+    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "$__BU_MAIN_FS_MAX_FILENAME_LENGTH" 'Int' \
         "$__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__FILESYSTEM__SET_GENERAL_SPECIFICATION__FILENAME_LENGTH" \
         "$(basename "${BASH_SOURCE[0]}")" "${FUNCAME[0]}" "$(( LINENO-2 ))";
 fi
