--- a/install/.Bash-utils/config/modules/main/time.conf
+++ b/install/.Bash-utils/config/modules/main/time.conf
@@ -26,7 +26,7 @@
 # Saving the current date in YYYYY-MM-DD hh-mm-ss format (YEAR-MONTH-DAY hour-minute-second)
 __BU_MAIN_TIME_DATE="$(date +"%Y-%m-%d %H:%M:%S")";
 
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_TIME_DATE' "$__BU_MAIN_TIME_DATE" 'CMD' \
+BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TIME_DATE' "$__BU_MAIN_TIME_DATE" 'CMD' \
 	"This command substitution executes the « date » command, and passes arguments in order to print the date at the « YYYY-MM-DD hh-mm-ss » format"  \
 	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
 
@@ -48,7 +48,7 @@ v_time_conf_date_display_color_3="78";
 #     "$(tput setaf "$v_time_conf_date_display_color_2")" \
 #     "$__BU_MAIN_TIME_DATE" \
 #     "$(tput setaf "$v_time_conf_date_display_color_3")")";
-# 
-# BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_TIME_DATE_DISPLAY' "$__BU_MAIN_TIME_DATE_DISPLAY" 'CMD' \
+#
+# BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TIME_DATE_DISPLAY' "$__BU_MAIN_TIME_DATE_DISPLAY" 'CMD' \
 # 	"This command substitution prints the output of the « __BU_MAIN_TIME_DATE » command substitution, with more decoration in order to display the date in an easily and colored readable log format : [ YYYY-MM-DD hh-mm-ss ]" \
 # 	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
