--- a/install/.Bash-utils/config/modules/main/Status.conf
+++ b/install/.Bash-utils/config/modules/main/Status.conf
@@ -9,7 +9,7 @@
 # Their values are checked in the "Status.lib" file, located in the "Bash-utils/lib/functions/main" directory, with the "CheckSTAT_" functions (CV = Correct Value).
 
 
-# "BU::Main::Checkings::CheckProjectLogPath()" and other low level's functions authorization to call a "Decho<...>()" function in case of need.
+# "BU.Main.Checkings.CheckProjectLogPath()" and other low level's functions authorization to call a "Decho<...>()" function in case of need.
 
 # This variable only accepts "authorize", "forbid" or "restrict" as values.
 # Default value : "forbid" (to avoid bugs during the program's initialization)
@@ -18,7 +18,7 @@
 __BU_MAIN_STAT_DECHO="forbid";
 
 
-# "BU::Main::Checkings::CheckProjectLogPath()" function's authorization to call an "BU::Echo<...>()" function in case of need.
+# "BU.Main.Checkings.CheckProjectLogPath()" function's authorization to call an "BU.Echo<...>()" function in case of need.
 
 # This variable only accepts "true" or "false" as values.
 # Default value : "true" (to avoid bugs and infinite loops during the initialization processus)
@@ -66,7 +66,7 @@ __BU_MAIN_STAT_LOG_REDIRECT="";
 # Project's authorization to operate at the root directory or one of its sub-folders.
 
 # This variable only accepts "authorized", "forbidden" or "restricted" as values.
-# Default value : "forbidden" (by security, and since there's no need to change its value during the initialization, you have to change this value manually or in your code with the "BU::Main::Status::ChangeSTAT_OPERATE_ROOT()" function).
+# Default value : "forbidden" (by security, and since there's no need to change its value during the initialization, you have to change this value manually or in your code with the "BU.Main.Status.ChangeSTAT_OPERATE_ROOT()" function).
 
 # shellcheck disable=SC2034
 __BU_MAIN_STAT_OPERATE_ROOT="forbidden";
@@ -98,7 +98,7 @@ __BU_MAIN_STAT_TIME_NEWLINE=".2";
 __BU_MAIN_STAT_TIME_TXT=".4";
 
 
-# Project's text formatting handling (the "BU::Decho<...>()" functions can format the text or not).
+# Project's text formatting handling (the "BU.Decho<...>()" functions can format the text or not).
 
 # This variable only accepts "true" or "false" as value.
 # Default value : "true" (formatting accepted)
