Renamed many functions and added an aliases file with their old names, which are easier to write, but more confusing about their original files

--- a/install/.Bash-utils/config/modules/main/Filesystem.conf
+++ b/install/.Bash-utils/config/modules/main/Filesystem.conf
@@ -127,7 +127,7 @@ elif [ "${__BU_MAIN_FS_NAME,,}" = 'zfs' ]; then
 
 else
     # shellcheck disable=SC2059
-    BU.Main.Errors.HandleSmallErrors 'W' "$(printf "$__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__FILESYSTEM__UNSUPPORTED_FILESYSTEM" "$(BU.DechoHighlight "$__BU_MAIN_FS_NAME")")" 'R';
+    BU.Main.Errors.HandleSmallErrors 'W' "$(printf "$__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__FILESYSTEM__UNSUPPORTED_FILESYSTEM" "$(BU.Main.Decho.Decho.Highlight "$__BU_MAIN_FS_NAME")")" 'R';
 
     # File system max filename length.
     __BU_MAIN_FS_MAX_FILENAME_LENGTH='255';
