--- a/install/.Bash-utils/config/modules/main/Status.conf
+++ b/install/.Bash-utils/config/modules/main/Status.conf
@@ -98,7 +98,7 @@ __BU_MAIN_STAT_TIME_NEWLINE=".2";
 __BU_MAIN_STAT_TIME_TXT=".4";
 
 
-# Project's text formatting handling (the "BU.Decho<...>()" functions can format the text or not).
+# Project's text formatting handling (the "BU.Main.Decho.Decho<...>()" functions can format the text or not).
 
 # This variable only accepts "true" or "false" as value.
 # Default value : "true" (formatting accepted)
